2004-06-20  wrobell <wrobell@pld-linux.org>
	* gaphor/ui/mainactions.py: set default name for created diagram and
	allow user to edit it immediately

2005-01-04  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/UML/uml2.gaphor: added parse() and render operations to
	Lifeline.
	* gaphor/misc/action.py: added better support for Slots. Now a
	slot can be represented by a class. A slot can be rebuild (so the
	menu is rebuild).
	* gaphor/ui/menufactory.py: extented for use of slots.
	* tests/menu.py: added test for slots.

2005-01-03  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/pluginmanager.py: raise exceptions when a wrong xml-tag is
	found in the plugin.xml file.

2004-12-23  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/message.py: added message text.

2004-12-20  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/implementation.py: removed recursive import of
	InterfaceItem.

2004-12-02  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
	
	* gaphor/diagram/association.py (unlink): explicitly unlink()
	AssociationEnds.
	* gaphor/diagram/interaction.py: New class, a sequence diagram
	interaction.
	* gaphor/diagram/lifeline.py: New class, a sequence diagram lifeline
	* gaphor/diagram/message.py: New class, a Message (seq. diagram).

2004-11-23  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
	
	* gaphor/ui/mainwindow.py: Allow mainwindow to shrink.

2004-11-23  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/UML/uml2.gaphor: implemented Interaction diagrams.
	* utils/genUML2.py: let code generator support Sort suffix.
	* gaphor/misc/resource.py: Added resource file backend.
	* gaphor/__init__.py: save resources when the program exits
	* gaphor/ui/mainwindow.py: Added persistent property for window size.
	* gaphor/diagram/placementactions.py: made reset-tool property
	persistent.

2004-11-22  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/misc/resource.py: added persistent property to resource values.