@@ -1,4 +1,12 @@
-2004-06-20  wrobell <wrobell@pld-linux.org>
+2005-01-04  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
+
+	* gaphor/misc/action.py: fixed ObjectAction for use with slots.
+	Added ActionPool.set_action().
+	* gaphor/ui/mainactions.py: added Recent files slot
+	* gaphor/ui/mainwindow.py: (set_filename) add file to recent files.
+
+2004-01-04  wrobell <wrobell@pld-linux.org>
+
 	* gaphor/ui/mainactions.py: set default name for created diagram and
 	allow user to edit it immediately
 
